--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+requests-ecp (0.2.1-1) unstable; urgency=low
+
+  * update for 0.2.1
+
+ -- Duncan Macleod <duncan.macleod@ligo.org>  Mon, 23 Mar 2020 10:00:00 +0000
+
 requests-ecp (0.2.0-1) unstable; urgency=low
 
   * development release
