--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+requests-ecp (0.2.2-1) unstable; urgency=low
+
+  * update for 0.2.2
+  * tests are now bundled with the package
+
+ -- Duncan Macleod <duncan.macleod@ligo.org>  Fri, 19 Mar 2021 10:36:00 +0000
+
 requests-ecp (0.2.1-1) unstable; urgency=low
 
   * update for 0.2.1
