--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+requests-ecp (0.3.1-1) unstable; urgency=low
+
+  * update for 0.3.1
+
+ -- Duncan Macleod <duncan.macleod@ligo.org>  Mon, 17 Jul 2023 21:34:00 +0100
+
 requests-ecp (0.3.0-1) unstable; urgency=low
 
   * update for 0.3.0
